# Embedded-Systems_MiniProject2022

./: .gitignore  README.md
CameraReader/: BramReader.cpp  Reader_v2.cpp  Readme.txt
MPSoC4Drones/: README.md
package_ROS2/: BasicPublisher.py  CMakeLists.txt  package.xml
package_ROS2/robotis_ws/: RosMsg.cpp
package_ROS2/robotis_ws/install/: local_setup.sh  setup.sh
package_ROS2/robotis_ws/install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  port_handler_arduino.h  port_handler_windows.h  protocol2_packet_handler.h
package_ROS2/robotis_ws/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh  package.xml
package_ROS2/robotis_ws/install/dynamixel_sdk/share/dynamixel_sdk/cmake/: dynamixel_sdkConfig-version.cmake  dynamixel_sdkConfig.cmake
package_ROS2/robotis_ws/install/dynamixel_sdk/share/dynamixel_sdk/environment/: library_path.dsv
package_ROS2/robotis_ws/install/dynamixel_sdk_custom_interfaces/include/dynamixel_sdk_custom_interfaces/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h
package_ROS2/robotis_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.sh  package.sh  package.xml
package_ROS2/robotis_ws/install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
package_ROS2/robotis_ws/install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.zsh  package.sh
package_ROS2/robotis_ws/log/: latest_build
package_ROS2/src/: Motor.cpp
(+395 files in other folders)
